manifest/support/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-support
spec:
  progressDeadlineSeconds: 2400
  selector:
    matchLabels:
      app: chat-app-support
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: chat-app-support
    spec:
      containers:
        - name: chat-app-support
          image: cyrildavif/chat_app_support:bc6cf01
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi

          ports:
            - containerPort: 8084
