manifest/support/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-app-support-svc
  namespace: apps
spec:
  selector:
    app: chat-app-support
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: NodePort
